<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="30dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/really_delete"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/dialog_delete_item_delete_btn"
            android:background="@drawable/button_bottom_red200"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/delete"
            android:textColor="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="40dp"/>
        <Button
            android:id="@+id/dialog_delete_item_cancel_btn"
            android:layout_marginLeft="15dp"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/cancel"
            android:textColor="#ffffff"
            android:background="@drawable/button_bottom_red50"
            android:layout_width="wrap_content"
            android:layout_height="40dp"/>

    </LinearLayout>

</LinearLayout>