<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:padding="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--이미지-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_gravity="center_horizontal"
                android:layout_width="150dp"
                android:layout_height="150dp">
                <ImageView
                    android:clickable="true"
                    android:id="@+id/dialog_img_add_imgView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"/>
                <Button
                    android:id="@+id/dialog_img_add_plus_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_board_plus"
                    android:text="@string/image_plus"
                    android:textColor="#666666"
                    android:textSize="25sp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dialog_item_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nextFocusDown="@id/dialog_item_color"
                    android:inputType="text"
                    android:hint="제품명"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <!--컬러-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dialog_item_color"
                        android:nextFocusDown="@id/dialog_item_capacity"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="컬러"/>
                </com.google.android.material.textfield.TextInputLayout>
                <!--용량-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dialog_item_capacity"
                        android:nextFocusDown="@id/dialog_item_price"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="용량"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginRight="10dp"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dialog_item_price"
                        android:nextFocusDown="@id/dialog_item_expiryDate"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="가격"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dialog_item_expiryDate"
                        android:nextFocusDown="@id/dialog_item_etc"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="기한"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dialog_item_etc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="메모"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/dialog_item_category_spinner_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:textSize="18sp"
                    android:textColor="#000000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"/>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_marginLeft="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Spinner
                        android:id="@+id/dialog_item_category_spinner"
                        android:background="@drawable/style_bottom_bababa_10"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="@drawable/arrow_under"
                        android:layout_marginRight="5dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/dialog_item_brand_spinner_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:textSize="18sp"
                    android:textColor="#000000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brand"/>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_marginLeft="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Spinner
                        android:id="@+id/dialog_item_brand_spinner"
                        android:background="@drawable/style_bottom_bababa_10"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="@drawable/arrow_under"
                        android:layout_marginRight="5dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/dialog_item_store_spinner_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:text="@string/store"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_marginLeft="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Spinner
                        android:id="@+id/dialog_item_store_spinner"
                        android:background="@drawable/style_bottom_bababa_10"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="@drawable/arrow_under"
                        android:layout_marginRight="5dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/dialog_item_add_btn"
                    android:background="@drawable/button_bottom_blue200"
                    style="?android:attr/borderlessButtonStyle"
                    android:text="@string/add"
                    android:textColor="#ffffff"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"/>
                <Button
                    android:id="@+id/dialog_item_cancel_btn"
                    android:layout_marginLeft="15dp"
                    style="?android:attr/borderlessButtonStyle"
                    android:text="@string/cancel"
                    android:textColor="#ffffff"
                    android:background="@drawable/button_bottom_blue50"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"/>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>